Enviando projeto de mapa dinâmico

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -63,7 +63,7 @@
 	                    </a>
 					</li>
 					<li class="active">
-						<a id="hide_route" th:href="@{/}">
+						<a th:href="@{/}">
 	                        <i class="material-icons">map</i>
 	                        <p>Nova Rota</p>
 	                    </a>
