--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 <head>
 	<meta charset="utf-8" />
 	<link rel="apple-touch-icon" sizes="76x76" href="assets/img/new_logo.png" />
-	<link rel="icon" type="image/png" href="assets/img/new_logo.png" />
+	<link rel="icon" type="image/png" href="assets/img/favicon-map.png" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
 	<title>Meu Mapa</title>
